Crash when rendering animation with mpeg-1 #88623

Closed
opened 2021-05-27 12:14:32 +07:00 by Ankit Meel · 12 comments
Collaborator

macOS 10.14
Intel HD 6000

Broken: 8d6264ea12 CC @ZedDB
Worked: 5bfd5e77b7

Crash at

- 0   av_opt_free ()
- 1   avcodec_close ()
- 2   avcodec_free_context ()
- 3   end_ffmpeg_impl at source/blender/blenkernel/intern/writeffmpeg.c:1427
- 4   BKE_ffmpeg_end at source/blender/blenkernel/intern/writeffmpeg.c:1458
- 5   re_movie_free_all at source/blender/render/intern/pipeline.c:2298
- 6   RE_RenderAnim at source/blender/render/intern/pipeline.c:2370
- 7   render_startjob at source/blender/editors/render/render_internal.c:641
- 8   do_job_thread at source/blender/windowmanager/intern/wm_jobs.c:389
- 9   tslot_thread_start(void*) at source/blender/blenlib/intern/threads.cc:231
- 10  _pthread_body ()
- 11  _pthread_start ()
#12  thread_start ()

Steps

  • Load video editing workspace, and add a video strip.
  • Change render settings from PNG to ffmpeg video
  • Change container to MPEG-1.
  • Render menu -> Render animation
  • Crash

Expected behavior:
Error: MPEG-1/2 does not support 4183/250 fps

macOS 10.14 Intel HD 6000 Broken: 8d6264ea12 CC @ZedDB Worked: 5bfd5e77b7 Crash at ``` - 0 av_opt_free () - 1 avcodec_close () - 2 avcodec_free_context () - 3 end_ffmpeg_impl at source/blender/blenkernel/intern/writeffmpeg.c:1427 - 4 BKE_ffmpeg_end at source/blender/blenkernel/intern/writeffmpeg.c:1458 - 5 re_movie_free_all at source/blender/render/intern/pipeline.c:2298 - 6 RE_RenderAnim at source/blender/render/intern/pipeline.c:2370 - 7 render_startjob at source/blender/editors/render/render_internal.c:641 - 8 do_job_thread at source/blender/windowmanager/intern/wm_jobs.c:389 - 9 tslot_thread_start(void*) at source/blender/blenlib/intern/threads.cc:231 - 10 _pthread_body () - 11 _pthread_start () #12 thread_start () ``` **Steps** - Load video editing workspace, and add a video strip. - Change render settings from PNG to ffmpeg video - Change container to MPEG-1. - Render menu -> Render animation - Crash Expected behavior: Error: MPEG-1/2 does not support 4183/250 fps
Poster
Collaborator

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Poster
Collaborator

Added subscriber: @ankitm

Added subscriber: @ankitm
Poster
Collaborator

Changed status from 'Confirmed' to: 'Needs Triage'

Changed status from 'Confirmed' to: 'Needs Triage'
Poster
Collaborator

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Poster
Collaborator

Added subscriber: @ZedDB

Added subscriber: @ZedDB
kathybowing commented 2021-05-27 13:18:09 +07:00 (Migrated from localhost:3001)
Collaborator

Added subscriber: @kathybowing

Added subscriber: @kathybowing

I can not reproduce this on my end.

@ankitm can you reproduce this on mac?

I can not reproduce this on my end. @ankitm can you reproduce this on mac?
Poster
Collaborator

@ankitm can you reproduce this on mac?

Yeah.. I reported it, after bisecting.

> @ankitm can you reproduce this on mac? Yeah.. I reported it, after bisecting.

Ah... 😅

Well I can't reproduce this on my end. But I have a hunch what this could be.
It could be related to an other issue.

Ah... 😅 Well I can't reproduce this on my end. But I have a hunch what this could be. It could be related to an other issue.

This issue was referenced by 19c0666d40

This issue was referenced by 19c0666d408a56d42310ca4a70df6ba07a2a542d

This issue was referenced by ce649c7344

This issue was referenced by ce649c73446ea710ffdf7383495b52b0827a5893

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastian Parborg self-assigned this 2021-05-31 11:29:20 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88623
There is no content yet.